fixed css so product images don't stretch

--- a/client/src/components/ProductOverview/product-image-gallery/product-image-gallery.styles.scss
+++ b/client/src/components/ProductOverview/product-image-gallery/product-image-gallery.styles.scss
@@ -24,6 +24,7 @@
 .image-gallery-main {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   opacity: 0.7;
   &:hover {
     cursor: zoom-in
